--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,6 +3,7 @@
   --txt-color: #221e22;
   --yellow: #e29f01;
   --white: #fff;
+  --black: #000;
 }
 
 * {
@@ -112,3 +113,138 @@ html {
 .sci i:hover {
     transform: rotate(30deg);
 }
+
+.fashion {
+    z-index: 2;
+    color: var(--white);
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    padding: 20px;
+    writing-mode: vertical-lr;
+    text-orientation: mixed;
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.z-index-99 {
+    z-index: 99 !important;
+}
+
+.col-5 {
+    width: 41.66%;
+}
+
+.col-7 {
+    width: 58.33%;
+}
+
+.text-yellow {
+    color: var(--yellow);
+}
+
+.info {
+    color: var(--white);
+    text-align: right;
+    position: relative;
+    display: flex;
+    overflow: visible;
+    width: 100%;
+    height: 80%;
+    align-items: center;
+}
+
+.info h1 {
+    font-size: 150px;
+    font-weight: 900;
+    line-height: 140px;
+    text-transform: uppercase;
+    text-align: left;
+}
+
+.info p {
+    margin:  50px 0;
+    text-align: justify;
+}
+
+.info button {
+    font-size: 30px;
+    padding: 10px 50px;
+    border-radius: 30px;
+    outline: transparent;
+    border: 2px solid var(--white);
+    background-color: transparent;
+    color: var(--white);
+    font-weight: 600;
+    cursor: pointer;
+    transition: background-color .3s ease-in-out;
+}
+
+.info button:hover {
+    background-color: var(--white);
+    color: var(--black);
+}
+
+.product-info {
+    position: absolute;
+    width: 100%;
+    height: fit-content;
+    left: 0;
+    padding: 0 80px;
+}
+
+[class*="col-"] {
+    display: flex;
+    align-items: center;
+    z-index: 2;
+}
+
+.slider {
+    display: flex;
+    align-items: center;
+    position: relative;
+    width: 50%;
+    height: 80%;
+    overflow: visible;
+}
+
+.slide {
+    position: absolute;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+}
+
+.slide:nth-child(1) {
+    z-index: 4;
+}
+.slide:nth-child(2) {
+    z-index: 2;
+    width: 80%;
+    height: 80%;
+    left: 70%;
+}
+.slide:nth-child(3) {
+    z-index: 1;
+    width: 60%;
+    height: 60%;
+    left: 120%;
+}
+.slide:nth-child(4) {
+    z-index: 0;
+    width: 60%;
+    height: 60%;
+    left: 120%;
+    transform: scale(0);
+}
+
+.img-holder {
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    background-position: top;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
