--- a/static/css/style.css
+++ b/static/css/style.css
@@ -37,214 +37,292 @@ html {
   z-index: 1;
 }
 
-
 .nav {
-    z-index: 99;
-    color: var(--white);
-    display: flex;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    height: 80px;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 80px;
+  z-index: 99;
+  color: var(--white);
+  display: flex;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 80px;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 80px;
 }
 
 .logo {
-    font-size: 30px;
-    font-weight: 900;
-    cursor: pointer;
+  font-size: 30px;
+  font-weight: 900;
+  cursor: pointer;
+  animation: top-down 1.5s forwards;
 }
 
 .cart {
-    font-size: 30px;
-    cursor: pointer;
+  font-size: 30px;
+  cursor: pointer;
+  animation: right-to-left 1.5s forwards;
+}
+
+.menu {
+    animation: left-to-right 1.5s forwards;
 }
 
 .hamburger {
-    position: relative;
-    cursor: pointer;
+  position: relative;
+  cursor: pointer;
 }
 
 .hamburger,
 .hamburger::before,
 .hamburger::after {
-    width: 30px;
-    height: 3px;
-    border-radius: .5rem;
-    background-color: var(--white);
+  width: 30px;
+  height: 3px;
+  border-radius: 0.5rem;
+  background-color: var(--white);
 }
 
 .hamburger::before,
 .hamburger::after {
-    content: '';
-    position: absolute;
+  content: '';
+  position: absolute;
 }
 
 .hamburger::before {
-    top: 10px;
+  top: 10px;
 }
 
 .hamburger::after {
-    top: -10px;
+  top: -10px;
 }
 
 .sci {
-    z-index: 992;
-    color: var(--white);
-    display: flex;
-    position: fixed;
-    right: 0;
-    height: 100%;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 0 20px;
+  z-index: 992;
+  color: var(--white);
+  display: flex;
+  position: fixed;
+  right: 0;
+  height: 100%;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 0 20px;
+  animation: right-to-left 1.5s;
 }
 
 .sci i {
-    font-size: 20px;
-    margin-bottom: 10px;
-    cursor: pointer;
-    transition: .5s ease-in-out;
+  font-size: 20px;
+  margin-bottom: 10px;
+  cursor: pointer;
+  transition: 0.5s ease-in-out;
 }
 
 .sci i:hover {
-    transform: rotate(30deg);
+  transform: rotate(30deg);
 }
 
 .fashion {
-    z-index: 2;
-    color: var(--white);
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    padding: 20px;
-    writing-mode: vertical-lr;
-    text-orientation: mixed;
-    font-size: 20px;
-    font-weight: 600;
+  z-index: 2;
+  color: var(--white);
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  padding: 20px;
+  writing-mode: vertical-lr;
+  text-orientation: mixed;
+  font-size: 20px;
+  font-weight: 600;
+  animation: left-to-right 1.5s;
 }
 
 .z-index-99 {
-    z-index: 99 !important;
+  z-index: 99 !important;
 }
 
 .col-5 {
-    width: 41.66%;
+  width: 41.66%;
 }
 
 .col-7 {
-    width: 58.33%;
+  width: 58.33%;
 }
 
 .text-yellow {
-    color: var(--yellow);
+  color: var(--yellow);
 }
 
 .info {
-    color: var(--white);
-    text-align: right;
-    position: relative;
-    display: flex;
-    overflow: visible;
-    width: 100%;
-    height: 80%;
-    align-items: center;
+  color: var(--white);
+  text-align: right;
+  position: relative;
+  display: flex;
+  overflow: visible;
+  width: 100%;
+  height: 80%;
+  align-items: center;
 }
 
 .info h1 {
-    font-size: 150px;
-    font-weight: 900;
-    line-height: 140px;
-    text-transform: uppercase;
-    text-align: left;
+  font-size: 150px;
+  font-weight: 900;
+  line-height: 140px;
+  text-transform: uppercase;
+  text-align: left;
 }
 
 .info p {
-    margin:  50px 0;
-    text-align: justify;
+  margin: 50px 0;
+  text-align: justify;
 }
 
 .info button {
-    font-size: 30px;
-    padding: 10px 50px;
-    border-radius: 30px;
-    outline: transparent;
-    border: 2px solid var(--white);
-    background-color: transparent;
-    color: var(--white);
-    font-weight: 600;
-    cursor: pointer;
-    transition: background-color .3s ease-in-out;
+  font-size: 30px;
+  padding: 10px 50px;
+  border-radius: 30px;
+  outline: transparent;
+  border: 2px solid var(--white);
+  background-color: transparent;
+  color: var(--white);
+  font-weight: 600;
+  cursor: pointer;
+  transition: background-color 0.3s ease-in-out;
 }
 
 .info button:hover {
-    background-color: var(--white);
-    color: var(--black);
+  background-color: var(--white);
+  color: var(--black);
 }
 
 .product-info {
-    position: absolute;
-    width: 100%;
-    height: fit-content;
-    left: 0;
-    padding: 0 80px;
+  position: absolute;
+  width: 100%;
+  height: fit-content;
+  left: 0;
+  padding: 0 80px;
 }
 
-[class*="col-"] {
-    display: flex;
-    align-items: center;
-    z-index: 2;
+[class*='col-'] {
+  display: flex;
+  align-items: center;
+  z-index: 2;
 }
 
 .slider {
-    display: flex;
-    align-items: center;
-    position: relative;
-    width: 50%;
-    height: 80%;
-    overflow: visible;
+  display: flex;
+  align-items: center;
+  position: relative;
+  width: 50%;
+  height: 80%;
+  overflow: visible;
 }
 
 .slide {
-    position: absolute;
-    display: flex;
-    width: 100%;
-    height: 100%;
-    align-items: center;
+  position: absolute;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  animation: bottom-up 2s;
 }
 
 .slide:nth-child(1) {
-    z-index: 4;
+  z-index: 4;
 }
 .slide:nth-child(2) {
-    z-index: 2;
-    width: 80%;
-    height: 80%;
-    left: 70%;
+  z-index: 2;
+  width: 80%;
+  height: 80%;
+  left: 70%;
 }
 .slide:nth-child(3) {
-    z-index: 1;
-    width: 60%;
-    height: 60%;
-    left: 120%;
+  z-index: 1;
+  width: 60%;
+  height: 60%;
+  left: 120%;
 }
 .slide:nth-child(4) {
-    z-index: 0;
-    width: 60%;
-    height: 60%;
-    left: 120%;
-    transform: scale(0);
+  z-index: 0;
+  width: 60%;
+  height: 60%;
+  left: 120%;
+  transform: scale(0);
 }
 
 .img-holder {
-    width: 100%;
-    height: 100%;
-    border-radius: 10px;
-    background-position: top;
-    background-size: cover;
-    background-repeat: no-repeat;
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  background-position: top;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
+.slide-control {
+  color: var(--white);
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  border: 2px solid var(--white);
+}
+
+.slide-control:hover {
+  background-color: var(--white);
+  color: var(--black);
+}
+
+.slide-control:hover i {
+  color: var(--black);
+}
+
+/* animation */
+
+@keyframes top-down {
+  0% {
+    opacity: 0;
+    transform: translateY(-100%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes bottom-up {
+  0% {
+    opacity: 0;
+    transform: translateY(100%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes left-to-right {
+  0% {
+    opacity: 0;
+    transform: translateX(-100%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+@keyframes right-to-left {
+  0% {
+    opacity: 0;
+    transform: translateX(100%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
