--- a/static/css/style.css
+++ b/static/css/style.css
@@ -222,36 +222,35 @@ html {
 .product-info.active p,
 .product-info.active button {
   opacity: 1;
-  transition: opacity 1s, transform 1.2s, letter-spacing 1.2s,
-  right 1.2s;
+  transition: opacity 1s, transform 1.2s, letter-spacing 1.2s, right 1.2s;
 }
 
 .product-info h1 {
-    letter-spacing: 20px;
+  letter-spacing: 20px;
 }
 
 .product-info.active h1 {
-    letter-spacing: unset;
+  letter-spacing: unset;
 }
 
-.product-info> span{
-    position: absolute;
-    right: 200px;  
+.product-info > span {
+  position: absolute;
+  right: 200px;
 }
 
-.product-info.active > span{
-    position: absolute;
-    right: 80px;  
+.product-info.active > span {
+  position: absolute;
+  right: 80px;
 }
 
 .product-info p,
-.product-info button  {
-    transform: translateY(100px);
+.product-info button {
+  transform: translateY(100px);
 }
 
 .product-info.active p,
-.product-info.active button  {
-    transform: translateY(0);
+.product-info.active button {
+  transform: translateY(0);
 }
 
 [class*='col-'] {
@@ -380,4 +379,55 @@ html {
     opacity: 1;
     transform: translateX(0);
   }
+}
+
+/* Responsive */
+
+@media only screen and (max-width: 600px) {
+  .col-5,
+  .col-7 {
+    width: 100%;
+    height: 50%;
+  }
+
+  .container {
+    flex-direction: column-reverse;
+  }
+
+  .info {
+    align-items: flex-start;
+  }
+
+  .info h1 {
+    font-size: 63px;
+    line-height: 60px;
+    text-align: left;
+  }
+
+  .info p {
+    font-size: 12px;
+  }
+
+  .info button {
+    font-size: 20px;
+    padding: 10px 20px;
+  }
+
+  .product-info {
+    padding: 0 20px;
+  }
+
+  .col-7 {
+    align-items: flex-start;
+  }
+
+  .slider {
+    width: 80%;
+    height: 80%;
+    transform: translateY(20%);
+    padding: 50px;
+  }
+}
+
+@media only screen and (max-width: 1024px) {
 }
